# matlab_tools

./: LICENSE  README.md
planar_projection/: .gitignore  README.md  runProjectionViewer.m  runProjectionViewerPrototype.m  runSyntheticAlignmentPrototype.m  runTests.m
planar_projection/docs/: alignment_operator_guide.md  alignment_reliability_validation_report.md  alignment_workflow_hardening_plan.md  backend_app_workflow.md  performance_optimization_workplan.md  viewer_development_plan.md
planar_projection/scripts/: alignment_feature_repeatability_evaluation.m  alignment_filter_model_evaluation.m  alignment_oblique_terrain_evaluation.m  alignment_working_image_evaluation.m  viewer_performance_evaluation.m  viewer_raster_preview_evaluation.m  viewer_surface_consolidation_evaluation.m
planar_projection/src/: PlanarProjection.m  ProjectionAlignmentCommonAnchor.m  ProjectionAlignmentFeatureMatcher.m  ProjectionAlignmentGeometricModel.m  ProjectionAlignmentMatchFilter.m  ProjectionAlignmentMatchLedger.m  ProjectionAlignmentObliqueTerrainHarness.m  ProjectionAlignmentObservationProjector.m  ProjectionAlignmentOpkSolver.m  ProjectionAlignmentOptions.m  ProjectionAlignmentParameterModel.m  ProjectionAlignmentRequest.m  ProjectionAlignmentResult.m  ProjectionAlignmentRunner.m  ProjectionAlignmentSafeSolvePolicy.m  ProjectionAlignmentScheduler.m  ProjectionAlignmentSession.m  ProjectionAlignmentSyntheticHarness.m  ProjectionAlignmentWorkingGrid.m  ProjectionAlignmentWorkingImageComparison.m  ProjectionAlignmentWorkingImageRenderer.m  ProjectionBackendJob.m  ProjectionBackendOutputGrid.m  ProjectionBackendOutputWriter.m  ProjectionBackendProcessor.m  ProjectionBackendRenderPlan.m  ProjectionBackendTiledRenderer.m  ProjectionDenseSurfaceViewer.m  ProjectionFullSourceInverseWarp.m  ProjectionLayerIdentity.m  ProjectionMeshBuilder.m  ProjectionPreviewPyramid.m  ProjectionPreviewTileGeometry.m  ProjectionReadbackRenderer.m  ProjectionSourceGeometry.m  ProjectionViewerApp.m  ProjectionViewerHarness.m  ProjectionViewerPerformanceMonitor.m  ProjectionViewerState.m  ProjectionViewportGrid.m
planar_projection/tests/: ProjectionAlignmentCoplanarityTest.m  ProjectionAlignmentFeatureMatcherTest.m  ProjectionAlignmentMatchFilterTest.m  ProjectionAlignmentMatchLedgerTest.m  ProjectionAlignmentModelTest.m  ProjectionAlignmentObliqueTerrainHarnessTest.m  ProjectionAlignmentObservationProjectorTest.m  ProjectionAlignmentOpkSolverTest.m  ProjectionAlignmentReliabilityValidationTest.m  ProjectionAlignmentSafeSolvePolicyTest.m  ProjectionAlignmentSchedulerTest.m  ProjectionAlignmentSessionTest.m  ProjectionAlignmentSyntheticHarnessTest.m  ProjectionAlignmentWorkingGridTest.m  ProjectionAlignmentWorkingImageComparisonTest.m  ProjectionAlignmentWorkingImageRendererTest.m  ProjectionBackendAlignmentIntegrationTest.m  ProjectionBackendGpuSupportTest.m  ProjectionBackendJobTest.m  ProjectionBackendProcessorOutputTest.m  ProjectionBackendProcessorValidationTest.m  ProjectionBackendRenderPlanTest.m  ProjectionBackendTiledRendererTest.m  ProjectionLayerIdentityTest.m  ProjectionMeshBuilderTest.m  ProjectionPreviewPyramidTest.m  ProjectionPreviewTileGeometryTest.m  ProjectionRasterPreviewRendererTest.m  ProjectionReadbackRendererTest.m  ProjectionSourceGeometryTest.m  ProjectionViewerAlignmentWorkflowTest.m  ProjectionViewerAppInteractionTest.m  ProjectionViewerHarnessTest.m  ProjectionViewerPerformanceMonitorTest.m  ProjectionViewerPerformanceTest.m  ProjectionViewerRealDataFramingTest.m  ProjectionViewerStateSceneTest.m  ProjectionViewportGridTest.m
rsm_reference_implementation/doc/: ALGORITHM_MAP.md  VALIDATION_REPORT.md
rsm_reference_implementation/src/: CONTENTS.m  MANIFEST.sha256  README.md  REVISION.txt  RsmAdj.m  RsmApa.m  RsmApb.m  RsmCfg.m  RsmDca.m  RsmDcb.m  RsmDir.m  RsmDom.m  RsmEca.m  RsmEcb.m  RsmGen.m  RsmGga.m  RsmGia.m  RsmGrid.m  RsmIda.m  RsmPca.m  RsmPia.m  RsmPoly.m  RsmProd.m  Sens.m  ToyPb.m  TreWriter.m  adjfields.m  collect_fields.m  condcov.m  evalrat.m  fdjac.m  fitadj.m  fitlin.m  fitrat.m  make_product.m  mccov.m  mkdirect.m  mkdom.m  mkgrid.m  mksamp.m  (+36 more)
sightline_workbench/: .gitignore  README.md  buildfile.m  openSurfaceWorkbenchRun.m  proceduralTwoImageAnaglyph.m  projectionTestGroups.m  runProjectionViewer.m  runProjectionViewerPrototype.m  runTestGroup.m  runTests.m  validateProjectionBackendJob.m
sightline_workbench/config/: dense_surface_synthetic.template.json
sightline_workbench/docs/: alignment_operator_guide.md  alignment_reliability_validation_report.md  alignment_workflow_hardening_plan.md  architecture_concept_recommendations.md  backend_app_workflow.md  backend_milestone_9_custom_gpu_kernel_assessment.md  cpp_backend_d0.md  (+29 more)
sightline_workbench/native/: CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY.md
sightline_workbench/native/benchmarks/: ceres_attitude_probe.cpp  core_benchmark.cpp  eigen_geometry_probe.cpp
sightline_workbench/native/cmake/: SightlineNativeConfig.cmake.in  SightlineWarnings.cmake
sightline_workbench/native/fixtures/: geometry_plane_intersections.csv  geometry_plane_intersections.json
sightline_workbench/native/include/sightline/: c_api.h  core.hpp  version.hpp
sightline_workbench/native/src/: c_api.cpp  core.cpp
sightline_workbench/native/tests/: c_api_smoke.c  core_tests.cpp
tools/: demo_estimateVerticalScaleDifference.m  estimateVerticalScaleDifference.m
(+241 files in other folders)
